update comment, tunning evco_cond_timed_wait.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,6 +1,7 @@
 AUTOMAKE_OPTIONS = foreign
 INCLUDES=-I../include
 LIBS     = -L../src -levco -levent
-noinst_PROGRAMS = test_echo 
+noinst_PROGRAMS = test_echo test_cond
 test_echo_SOURCES = test_echo.c
+test_cond_SOURCES = test_cond.c
 
