--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,7 +1,8 @@
 AUTOMAKE_OPTIONS = foreign
 INCLUDES=-I../include
 LIBS     = -L../src -levco -levent
-noinst_PROGRAMS = test_echo test_cond
+noinst_PROGRAMS = test_echo test_cond test_proxy
 test_echo_SOURCES = test_echo.c
 test_cond_SOURCES = test_cond.c
+test_proxy_SOURCES = test_proxy.c
 
